added questions and style

--- a/index.html
+++ b/index.html
@@ -3,6 +3,36 @@
 	<title>Mary's Guessing Game</title>
 </head>
 <body>
-	<h1>Can you guess whether these facts about me are true?</h1>
+	<style>
+		body {
+			background-color: #EAEAEA;
+		}
+
+		h1 {
+			color: navy;
+			font-family: arial;
+			font-size: 20px;
+		}
+		
+		p {
+			font-family: garamond;
+			font-size: 18px;
+			color: darkred;
+			font-weight: bold;
+		}
+		
+		h4 {
+			font-family: garamond;
+			font-size: 18px;
+		}
+	</style>
+	<h1>Fun Facts About Mary</h1>
+	<p>Can you guess whether these facts about me are true?</p>
+	<h4>Is my favorite color red?</h4>
+	<h4>Am I from Seattle?</h4>
+	<h4>Am I younger than 25?</h4>
+	<h4>Do I have a brother?</h4>
+	<h4>Do I like Game of Thrones?</h4>
+	<h4>How much did you enjoy this game on a scale from 1 (hated it) to 10 (loved it)?</h4>
 	<script language="javascript" type="text/javascript" src="game.js"></script>
 </body>
